continue fixing css alignment

--- a/css/contact.css
+++ b/css/contact.css
@@ -116,12 +116,18 @@
         /* justify-content: space-between;  */
       }
 
-       .title{
-        display: inline-block;
-        
-       }
-        
+      .title-info{
+        /* display: inline-block; */
+        margin-left: auto;
+        margin-right: auto; 
+      }
 
+      .title{
+         display: inline-block;
+         margin-left: 10px;
+         font-family: 'Poppins', sans-serif;
+      }
+        
       .square2{
         /* margin: auto; */
         margin-top: 20px;
